# potrol_robot

./: 306_300_map_save.pgm  306_300_map_save.yaml  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ackermann_steering_controller/include/ackermann_steering_controller/: ackermann_steering_controller.hpp  odometry.hpp  rolling_mean_accumulator.hpp  speed_limiter.hpp  visibility_control.h
install/ackermann_steering_controller/share/ackermann_steering_controller/: ackermann_steering_plugin.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ackermann_steering_controller/share/ackermann_steering_controller/cmake/: ackermann_steering_controllerConfig-version.cmake  ackermann_steering_controllerConfig.cmake  ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake
install/ackermann_steering_controller/share/ackermann_steering_controller/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/potrol_bringup/lib/potrol_bringup/: controller.launch.py  robot_controller.py  robot_controller_gpt.py
install/potrol_bringup/share/potrol_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/potrol_bringup/share/potrol_bringup/cmake/: potrol_bringupConfig-version.cmake  potrol_bringupConfig.cmake
install/potrol_bringup/share/potrol_bringup/config/: controller_configuration.yaml  controller_configuration_diff_drive.yaml  simple_controller_diff_drive.yaml  twist_mux.yaml
install/potrol_bringup/share/potrol_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/potrol_bringup/share/potrol_bringup/launch/: controller_diff_drive.launch.py
install/potrol_description_cmake/share/potrol_description_cmake/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/potrol_gazebo/share/potrol_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/potrol_hardware/share/potrol_hardware/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/potrol_navigation/share/potrol_navigation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/: commands.txt
src/potrol_bringup/: CMakeLists.txt
src/potrol_bringup/config/: twist_mux.yaml
src/potrol_bringup/launch/: controller.launch.py  controller_diff_drive.launch.py
src/potrol_bringup/src/: odom.cpp  odom.py  robot_controller_gpt.py
src/potrol_description_cmake/: CMakeLists.txt
src/potrol_description_cmake/launch/: robot_state_publisher.launch.py  state_joint_publisers_diff_drive.launch.py
src/potrol_description_cmake/meshes/: policebot_v4.stl  potrol_frame_v2.dae  robo_frame.stl  wheel.dae
src/potrol_description_cmake/urdf/: ackermann_steering2.xacro  agro_robot.xacro  base2.xacro  base_wheels.xacro  camera.xacro  lidar_gazebo.xacro  potrol_diff_drive.xacro  ros2_control copy.xacro  ros2_control_diff_drive.xacro
src/potrol_gazebo/: CMakeLists.txt
src/potrol_gazebo/include/potrol_gazebo/: botanbot_ackermann_drive.hpp
src/potrol_gazebo/launch/: parkovka_world.launch.py  potrol_sim_ackermann.launch.py
src/potrol_gazebo/models/texas_longhorn/: buka.dae  buka.mtl  buka.stl
src/potrol_gazebo/src/: botanbot_ackermann_drive.cpp
src/potrol_gazebo/worlds/: farm.world  parkovka.world
src/potrol_hardware/: CMakeLists.txt
src/potrol_navigation/: CMakeLists.txt  package.xml
src/potrol_navigation/config/: map.rviz  mapper_params_localization.yaml  nav2_params.yaml
src/potrol_navigation/launch/: localization_launch.py
(+49 files in other folders)
